added dateSpan function

--- a/helpers/layout.html
+++ b/helpers/layout.html
@@ -13,8 +13,8 @@
 
 	<div class="articleCard">
 
-		<p class="periodicalName centerit"></p>
-		<span class="js-count"></span>
+		<span class="periodicalName"></span><span class="js-count"></span>
+		<p class="dateString"></p>
 		<p class="articleTitle"></p>
 		<p class="articleAuthor"></p>
 		<p class="articleDate"></p>
