--- a/helpers/layout.html
+++ b/helpers/layout.html
@@ -13,13 +13,16 @@
 
 	<div class="articleCard">
 
-		<span class="periodicalName"></span><span class="js-count"></span>
-		<p class="dateString"></p>
-		<p class="articleTitle"></p>
-		<p class="articleAuthor"></p>
-		<p class="articleDate"></p>
-		<p class="articleDesc"></p>
-		<img class="articleURLImage" src="">
+		<p class="periodicalName centerit"></p>
+		<!-- <span class="js-count">xxxx</span> -->
+		<p class="dateString centerit"></p>
+		<img class="articleURLImage" src=""><br>
+		<p class="articleTitle centerit"></p>
+		<p class="articleDesc centerit"></p>
+		<p class="articleAuthor centerit"></p>
+		<!-- <p class="articleDate"></p> -->
+		
+		
 
 		<div class="button-container centerit">
 			<a class="js-discard pick-button" type="button"><strong>Discard</strong></a>
