Layout modified in helper dir

--- a/helpers/layout.html
+++ b/helpers/layout.html
@@ -13,26 +13,18 @@
 
 	<div class="articleCard">
 
-		<p class="periodicalName centerit"></p>
-		<!-- <span class="js-count">xxxx</span> -->
-		<p class="dateString centerit"></p>
-		<img class="articleURLImage" src=""><br>
-		<p class="articleTitle centerit"></p>
-		<p class="articleDesc centerit"></p>
-		<p class="articleAuthor centerit"></p>
-		<!-- <p class="articleDate"></p> -->
-		
-		
+		<p class="articleTitle"></p>
+		<p class="periodicalName"></p>
+		<p class="articleAuthor"></p>
+		<img class="articleURLImage" src="">
+		<p class="articleDesc"></p>
 
-		<div class="button-container centerit">
-			<a class="js-discard pick-button" type="button"><strong>Discard</strong></a>
-			<a class="js-keep pick-button" type="button"><strong>Keep</strong></a>
+		<div class="button-container">
+			<a class="button-left js-discard" type="button">Discard</a>
+			<a class="button-right js-keep" type="button">Keep in reading list</a>
 		</div>
 
 	</div>
-
-
-
 
  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="layout2.js"></script>
