multiple periodicals cause double-click bug

--- a/helpers/accordian.html
+++ b/helpers/accordian.html
@@ -16,7 +16,14 @@
 		<p class="accordion-title">Trump considers major changes amid escalating Russia crisis</p>
 	</button>
 	<div class="panel">
-	  <p>Lorem ipsum...</p>
+	  <p>Lorem ipsum...
+
+
+
+
+
+
+	  </p>
 	</div>
 
 	<button class="accordion">
