--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>1-2-3 Read!</title>
+    <title>Daily Reader</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
     <link rel="stylesheet" href="main.css">
@@ -11,21 +11,23 @@
 </head>
 
 <body>
-    <div class="main-container">
+    <!-- <div class="main-container"> -->
 
-        <div class="header-container">
+        <!-- <div class="header-container">
             <div class="header-periodicals"><span>Select periodicals</span></div>
-            <div class="header-readinglist"><span>Review articles</span></div>
-        </div>
+            <div class="header-readinglist"><span>Review the articles</span></div>
+        </div> -->
 
         <div class="app-container">
             <div id="source-container">
                 <p class="js-category"></p>
                 <p class="js-periodical"></p>
             </div>
+            <div class="js-readinglist">
+            </div>
         </div>  <!-- end of app-container div -->
 
-    </div> <!-- end of main-container -->
+    <!-- </div> end of main-container -->
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"
         integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" 
