New feature: remove and collapse all articles buttons

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
     <!-- <div class="main-container"> -->
 
-        <!-- <div class="header-container">
-            <div class="header-periodicals"><span>Select periodicals</span></div>
-            <div class="header-readinglist"><span>Review the articles</span></div>
-        </div> -->
+        <div class="header-container">
+            <button class="header-remove-all"><span>Remove all articles</span></button>
+            <button class="header-compact-all"><span>Collapse all articles</span></button>
+        </div>
 
         <div class="app-container">
             <div id="source-container">
